# support-ops

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  QUICKSTART.md  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  lint-test.yml
apps/api/: Dockerfile  README.md  package.json  pyproject.toml
apps/api/src/: main.py
apps/api/src/supportops_api/: __init__.py
apps/web/: Dockerfile  README.md  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/workers/: Dockerfile  README.md  package.json  pyproject.toml
apps/workers/src/: celery_app.py
docs/: ARCHITECTURE.md  DESIGN.md
scripts/: dev.sh  setup.sh
