[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supportops-workers"
version = "0.1.0"
description = "Async workers for SupportOps"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "boto3>=1.29.0",
    "minio>=7.2.0",
    "pypdf>=4.0.0",
    "python-pptx>=0.6.0",
    "python-docx>=0.8.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.3.0",
    "langchain>=0.1.0",
    "python-json-logger>=2.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
